--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/moonad/kaelin#readme",
   "devDependencies": {
+    "express": "^4.17.1",
+    "express-ws": "^4.0.0",
+    "raw-loader": "^2.0.0",
     "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3",
-    "raw-loader": "^2.0.0"
+    "webpack-cli": "^3.2.3"
   },
   "dependencies": {
     "formality-core": "^0.1.42",
